--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -8,7 +8,9 @@
 
 
 {% block content %}
-	
+	<!--Nav bar-->
+{% include "nav.html" %}
+<div class="container">	
 	<h1>Login</h1>
 	
 
@@ -35,6 +37,6 @@
 
 		</form>
 	</div>
-	
+</div>
 {% endblock content %}
 
