al parecer ya funciona el mecanismo de recuperacion de contraseña

--- a/registration/templates/registration/password_reset_form.html
+++ b/registration/templates/registration/password_reset_form.html
@@ -10,18 +10,16 @@
     }
 </style>
 
-<div class="container">
-        <div class="container">
+<div class="container my-3">
                 <form action="" method="post">{% csrf_token %}
                     <h3 class="mb-4">Restablecer contraseña</h3>
                   <div class="form-group">
-                    <p>¿Olvido su clave? Introduzca su dirección de correo y le enviaremos por correo electrónico las instrucciones para establecer una nueva.</p>
+                    <p>Introduzca su dirección de correo y le enviaremos por correo electrónico las instrucciones para establecer una nueva.</p>
                     {{ form.email.errors }}
                     <p><input type="email" name="email" maxlength="254" required="" id="id_email" class="form-control" placeholder="Introduce tu email" /></p>
                     <p><input type="submit" class="btn btn-primary btn-block" value="Confirmar"></p>
                   </div>
                 </form>
-        </div>
     </div>
 
 {% endblock %}
