--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -17,13 +17,14 @@
   			<strong>Exito!</strong> Usuario creado correctamente.
 		</div>
 	{% endif %}
-
+	
+		
 	
 	<div class="container">
-	<div class="d-flex justify-content-center h-100">
+	<div class="d-flex justify-content-center h-60">
 		<main class="form-signin ">
 			 <!-- Cponer imagen del logo -->
-			 <img class="mb-4" src=" " alt="" width="300" height="150">
+			 <img class="mb-4" src=" " alt="" width="100" height="150">
 	
 			 <h1 class="h1 mb-3 fw-normal">Acceso de usuario</h1>
 			 <div class="card">
@@ -39,9 +40,13 @@
 				<input type="password" class="form-control" name="password">
 			</div>
 
-			<button type="submit" class="btn btn-secondary">Iniciar sesion</button>
+			<button type="submit" class="btn btn-secondary btn-lg btn-block">Iniciar sesion</button>
 
 		</form>
+	</div>
+	<div class="">
+		<a href="#">¿Perdiste tu contraseña?</a>
+		<a href="/registrar_usuario/">¿No tienes Cuenta? Registrate</a>
 	</div>
 </div>	
 </main>
