--- a/gestion_de_farmacias/static/estilos.css
+++ b/gestion_de_farmacias/static/estilos.css
@@ -1,9 +1,34 @@
 body {
-    /*background-color: #f8f9fa;*/
-    background-color: #ff9090;
+    background-color: #f8f9fa
+   /* background-color: #ff9090;*/
     /*color: rgb(80, 80, 80);*/
 }
 
+
+.classcolor {
+    background-color: #00469C;
+}
+
+.colora
+{
+    color: #00469C!important;;
+}
+a{
+    color: #fff!important;
+}
+
+.btn {
+    background-color: #00469C;
+}
+
+.imglogo {
+    max-width: 200px;
+}
+
+footer 
+{
+    color: #fff!important;
+}
 
 /*las siguientes lines se usan para sacar las flechitas de 
 aumentar o disminuir el valor numerico de los campos input*/
