cambie la base de datos a mysql e hice la alerta para avisar que el usuario fue creado correctamente

--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -9,9 +9,11 @@
 
 <div class="m-3">
 
-{% if 'registrado' in request.GET %}
-<div class="alert alert-success">
-    <strong>Exito!</strong> Usuario creado correctamente.
+{% if 'registro_exitoso' in request.GET %}
+<div class="container">
+    <div class="alert alert-success">
+        <strong>Exito!</strong> Usuario creado correctamente.
+    </div>
 </div>
 {% endif %}
 
