--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -17,15 +17,27 @@
 </div>
 {% endif %}
 
+{% if form.non_field_errors %}
+<div class="container">
+    <div class="alert alert-danger" role="alert">
+        {% for error in form.non_field_errors %}
+            <p>{{ error }}</p>
+        {% endfor %}
+    </div>
+</div>
+{% endif %}
+
 
     <div class="d-flex justify-content-center h-60">
         <main class="form-signin  "> 
-            <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-person-workspace" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-person-workspace" viewBox="0 0 16 16">
                 <path d="M4 16s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H4Zm4-5.95a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
                 <path d="M2 1a2 2 0 0 0-2 2v9.5A1.5 1.5 0 0 0 1.5 14h.653a5.373 5.373 0 0 1 1.066-2H1V3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v9h-2.219c.554.654.89 1.373 1.066 2h.653a1.5 1.5 0 0 0 1.5-1.5V3a2 2 0 0 0-2-2H2Z"/>
               </svg>
             
             <h1 class="h1 mb-3 fw-normal">Acceso de usuario</h1>
+
+            
 
             <div class="card">
                 <div class="card-header">
@@ -45,9 +57,9 @@
                     </form>
                 </div>
 
-                <div class="">
-                    <a class="colora" href="{% url 'recuperar_password' %}">¿Perdiste tu contraseña?</a>
-                    <a class="colora" href="/registrar_usuario/">¿No tienes Cuenta? Registrate</a>
+                <div class="text-center">
+                    <p class="p-0 m-0"><a class="colora" href="{% url 'recuperar_password' %}">¿Perdiste tu contraseña?</a></p>
+                    <p class="p-0 m-0"><a class="colora" href="/registrar_usuario/">¿No tienes Cuenta? Registrate</a></p>
                 </div>
             </div>
 
