--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -58,8 +58,8 @@
                 </div>
 
                 <div class="text-center">
-                    <p class="p-0 m-0"><a class="colora" href="{% url 'recuperar_password' %}">¿Perdiste tu contraseña?</a></p>
-                    <p class="p-0 m-0"><a class="colora" href="/registrar_usuario/">¿No tienes Cuenta? Registrate</a></p>
+                    <a class="btn btn-primary btn-sm" href="{% url 'recuperar_password' %}">¿Perdiste tu contraseña?</a>
+                    <a class="btn btn-primary btn-sm" href="/registrar_usuario/">¿No tienes Cuenta? Registrate</a>
                 </div>
             </div>
 
