--- a/gestion_de_farmacias/static/estilos.css
+++ b/gestion_de_farmacias/static/estilos.css
@@ -1,7 +1,7 @@
 body {
     /*uso el rojo para testear que los estilos se carguen*/
     /*blanco */
-    background-color: #f8f9fa;
+    background-color: #f8f8f8;
     /*rojo*/
     /*background-color: #ff9090;*/
     /*      wwww       */
@@ -36,6 +36,21 @@ footer {
     color: #fff!important;
 }
 
+
+/* color de alerta */
+
+.alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
+
+
+.imgnormalizada img {
+    width: auto;
+    height: 400px;
+    max-height: 266px;
+  }
 
 /*las siguientes lines se usan para sacar las flechitas de 
 aumentar o disminuir el valor numerico de los campos input*/
