ultimas modificaciones antes de llevar el sistema a la utu

--- a/gestion_de_farmacias/static/estilos.css
+++ b/gestion_de_farmacias/static/estilos.css
@@ -12,9 +12,9 @@ body {
     /*color: rgb(80, 80, 80);*/
 }
 
-/*.classcolor {
+.classcolor {
     background-color: #00469C;
-}*/
+}
 
 /*.colora {
     color: #00469C!important;
