--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -59,8 +59,8 @@
 
                 <div class="card-footer">
                     <div class="text-center"> <!--      <p class="p-0 m-0"      -->
-                        <a class="btn btn-info sm btn-block" href="{% url 'recuperar_password' %}">¿Perdiste tu contraseña?</a>
-                        <a class="btn btn-info btn-sm btn-block" href="/registrar_usuario/">¿No tienes Cuenta? Registrate</a>
+                        <a class="btn bg-light btn-sm btn-block" href="{% url 'recuperar_password' %}">¿Perdiste tu contraseña?</a>
+                        <a class="btn bg-light btn-sm btn-block" href="/registrar_usuario/">¿No tienes Cuenta? Registrate</a>
                     </div>
                 </div>
                     
